gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test22625.d
version https://git-lfs.github.com/spec/v1
oid sha256:d1d9ece196caff51fa4bcf688f70bf677c94321228eca88e84b722ec754463fc
size 118
